@@ -28,6 +28,7 @@ common:
 	~!	new samples
 			- add a sample that show architecture data from pmk
 	+R!	improve tag generation and substitution.
+	-R	regroup common labels at the same place
 
 
 pmk:
@@ -58,10 +59,14 @@ pmkscan
 	+R	add support for advanced tags in pmkscan and pmk
 	-R	update scanfile.5 (ADVTAG)
 	~R!	add more entries in pmkscan.dat
-	-R!	add list of library targets in makefile for automatic lib
+	+R	add list of library targets in makefile for automatic lib
 			generation (list object)
 	~R	add distclean in generated makefiles
 	+R	improve C++ source scanning
+	-R	move hard coded strings of pmkscan.c into macros
+	-R	reorganize macros of pmkscan.h
+	+R	reimplement data install target generation in pmkscan
+	+R	reimplement man pages install target generation in pmkscan
 
 
 pmkinstall
