@@ -1,3 +1,10 @@
+11 Oct 2006 coudercd
+ * fixed label generation for objects.
+ * reimplemented instal targets for data files and man pages.
+ * updated pmkcfg.sh to sync with latest changes.
+ * updated scanfile to avoid unwanted template modification.
+ * updated Makefile.pmk with pmkscan generated template.
+
 10 Oct 2006 coudercd
  * reimplemented binary targets in makefile template generated by
    pmkscan to follow the same behavior as for libraries.
